update load logo