@@ -4,10 +4,10 @@ import org.springframework.boot.ApplicationArguments;
 import org.springframework.boot.ApplicationRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
-import org.springframework.core.io.ClassPathResource;
 import org.springframework.data.jpa.repository.config.EnableJpaAuditing;
 
-import java.nio.file.Files;
+import java.io.BufferedInputStream;
+import java.util.Objects;
 
 @EnableJpaAuditing
 @SpringBootApplication
@@ -19,6 +19,8 @@ public class CrmApplication implements ApplicationRunner {
 
     @Override
     public void run(ApplicationArguments args) throws Exception {
-        System.out.println(new String(Files.readAllBytes(new ClassPathResource("logo").getFile().toPath())));
+        System.out.println(new String(
+                new BufferedInputStream(Objects.requireNonNull(
+                        CrmApplication.class.getClassLoader().getResourceAsStream("logo"))).readAllBytes()));
     }
 }
